// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiTypes Should have specific API properties: all api types 1`] = `
Object {
  "API_QUERY_ACCOUNT_ID": "account_id",
  "API_QUERY_END": "end",
  "API_QUERY_NAME": "name_pattern",
  "API_QUERY_START": "start",
  "API_QUERY_USER_ID": "user_id",
  "API_RESPONSE_ACCOUNTS": "cloud_account_overviews",
  "API_RESPONSE_ACCOUNTS_ACCOUNT_ID": "cloud_account_id",
  "API_RESPONSE_ACCOUNTS_ARN": "arn",
  "API_RESPONSE_ACCOUNTS_DATE": "creation_date",
  "API_RESPONSE_ACCOUNTS_ID": "id",
  "API_RESPONSE_ACCOUNTS_IMAGES": "images",
  "API_RESPONSE_ACCOUNTS_INSTANCES": "instances",
  "API_RESPONSE_ACCOUNTS_NAME": "name",
  "API_RESPONSE_ACCOUNTS_OPENSHIFT_CHALLENGED": "openshift_images_challenged",
  "API_RESPONSE_ACCOUNTS_OPENSHIFT_INSTANCES": "openshift_instances",
  "API_RESPONSE_ACCOUNTS_OPENSHIFT_MEMORY": "openshift_memory_seconds",
  "API_RESPONSE_ACCOUNTS_OPENSHIFT_RUNTIME": "openshift_runtime_seconds",
  "API_RESPONSE_ACCOUNTS_OPENSHIFT_VCPU": "openshift_vcpu_seconds",
  "API_RESPONSE_ACCOUNTS_RHEL_CHALLENGED": "rhel_images_challenged",
  "API_RESPONSE_ACCOUNTS_RHEL_INSTANCES": "rhel_instances",
  "API_RESPONSE_ACCOUNTS_RHEL_MEMORY": "rhel_memory_seconds",
  "API_RESPONSE_ACCOUNTS_RHEL_RUNTIME": "rhel_runtime_seconds",
  "API_RESPONSE_ACCOUNTS_RHEL_VCPU": "rhel_vcpu_seconds",
  "API_RESPONSE_ACCOUNT_ACCOUNT_ID": "aws_account_id",
  "API_RESPONSE_ACCOUNT_ID": "id",
  "API_RESPONSE_ACCOUNT_NAME": "name",
  "API_RESPONSE_ACCOUNT_UPDATED_AT": "updated_at",
  "API_RESPONSE_AUTH_EMAIL": "email",
  "API_RESPONSE_AUTH_USERNAME": "username",
  "API_RESPONSE_IMAGES": "images",
  "API_RESPONSE_IMAGES_EDIT_CREATED": "created_at",
  "API_RESPONSE_IMAGES_EDIT_EC2_ID": "ec2_ami_id",
  "API_RESPONSE_IMAGES_EDIT_ENCRYPTED": "is_encrypted",
  "API_RESPONSE_IMAGES_EDIT_ID": "id",
  "API_RESPONSE_IMAGES_EDIT_INSPECTION_JSON": "inspection_json",
  "API_RESPONSE_IMAGES_EDIT_OPENSHIFT": "openshift",
  "API_RESPONSE_IMAGES_EDIT_OPENSHIFT_CHALLENGED": "openshift_challenged",
  "API_RESPONSE_IMAGES_EDIT_OPENSHIFT_DETECTED": "openshift_detected",
  "API_RESPONSE_IMAGES_EDIT_OWNER_AWS_ID": "owner_aws_account_id",
  "API_RESPONSE_IMAGES_EDIT_RESOURCE_TYPE": "resourcetype",
  "API_RESPONSE_IMAGES_EDIT_RHEL": "rhel",
  "API_RESPONSE_IMAGES_EDIT_RHEL_CHALLENGED": "rhel_challenged",
  "API_RESPONSE_IMAGES_EDIT_RHEL_DETECTED": "rhel_detected",
  "API_RESPONSE_IMAGES_EDIT_STATUS": "status",
  "API_RESPONSE_IMAGES_EDIT_UPDATED": "updated_at",
  "API_RESPONSE_IMAGES_ENCRYPTED": "is_encrypted",
  "API_RESPONSE_IMAGES_ID": "id",
  "API_RESPONSE_IMAGES_IMAGE_ID": "cloud_image_id",
  "API_RESPONSE_IMAGES_INSTANCES": "instances_seen",
  "API_RESPONSE_IMAGES_NAME": "name",
  "API_RESPONSE_IMAGES_OPENSHIFT": "openshift",
  "API_RESPONSE_IMAGES_OPENSHIFT_CHALLENGED": "openshift_challenged",
  "API_RESPONSE_IMAGES_OPENSHIFT_DETECTED": "openshift_detected",
  "API_RESPONSE_IMAGES_RHEL": "rhel",
  "API_RESPONSE_IMAGES_RHEL_CHALLENGED": "rhel_challenged",
  "API_RESPONSE_IMAGES_RHEL_DETECTED": "rhel_detected",
  "API_RESPONSE_IMAGES_SECONDS": "runtime_seconds",
  "API_RESPONSE_IMAGES_STATUS": "status",
  "API_RESPONSE_INSTANCES_OPENSHIFT": "instances_seen_with_openshift",
  "API_RESPONSE_INSTANCES_RHEL": "instances_seen_with_rhel",
  "API_RESPONSE_INSTANCES_USAGE": "daily_usage",
  "API_RESPONSE_INSTANCES_USAGE_DATE": "date",
  "API_RESPONSE_INSTANCES_USAGE_OPENSHIFT": "openshift_instances",
  "API_RESPONSE_INSTANCES_USAGE_OPENSHIFT_MEMORY": "openshift_memory_seconds",
  "API_RESPONSE_INSTANCES_USAGE_OPENSHIFT_RUNTIME": "openshift_runtime_seconds",
  "API_RESPONSE_INSTANCES_USAGE_OPENSHIFT_VCPU": "openshift_vcpu_seconds",
  "API_RESPONSE_INSTANCES_USAGE_RHEL": "rhel_instances",
  "API_RESPONSE_INSTANCES_USAGE_RHEL_MEMORY": "rhel_memory_seconds",
  "API_RESPONSE_INSTANCES_USAGE_RHEL_RUNTIME": "rhel_runtime_seconds",
  "API_RESPONSE_INSTANCES_USAGE_RHEL_VCPU": "rhel_vcpu_seconds",
  "API_RESPONSE_SYS_CONFIG_AWS_ID": "aws_account_id",
  "API_RESPONSE_SYS_CONFIG_AWS_POLICIES": "aws_policies",
  "API_RESPONSE_SYS_CONFIG_TRADITIONAL_INSPECTION": "traditional_inspection",
  "API_RESPONSE_SYS_CONFIG_VERSION": "version",
  "API_SUBMIT_ACCOUNT_ARN": "account_arn",
  "API_SUBMIT_ACCOUNT_AWS_ID": "aws_account_id",
  "API_SUBMIT_ACCOUNT_ID": "id",
  "API_SUBMIT_ACCOUNT_NAME": "name",
  "API_SUBMIT_ACCOUNT_RESOURCE_TYPE": "resourcetype",
  "API_SUBMIT_AUTH_PASSWORD": "password",
  "API_SUBMIT_AUTH_USERNAME": "username",
  "API_SUBMIT_IMAGE_ID": "id",
  "API_SUBMIT_IMAGE_OPENSHIFT_CHALLENGED": "openshift_challenged",
  "API_SUBMIT_IMAGE_RESOURCE_TYPE": "resourcetype",
  "API_SUBMIT_IMAGE_RHEL_CHALLENGED": "rhel_challenged",
  "apiTypes": Object {
    "API_QUERY_ACCOUNT_ID": "account_id",
    "API_QUERY_END": "end",
    "API_QUERY_NAME": "name_pattern",
    "API_QUERY_START": "start",
    "API_QUERY_USER_ID": "user_id",
    "API_RESPONSE_ACCOUNTS": "cloud_account_overviews",
    "API_RESPONSE_ACCOUNTS_ACCOUNT_ID": "cloud_account_id",
    "API_RESPONSE_ACCOUNTS_ARN": "arn",
    "API_RESPONSE_ACCOUNTS_DATE": "creation_date",
    "API_RESPONSE_ACCOUNTS_ID": "id",
    "API_RESPONSE_ACCOUNTS_IMAGES": "images",
    "API_RESPONSE_ACCOUNTS_INSTANCES": "instances",
    "API_RESPONSE_ACCOUNTS_NAME": "name",
    "API_RESPONSE_ACCOUNTS_OPENSHIFT_CHALLENGED": "openshift_images_challenged",
    "API_RESPONSE_ACCOUNTS_OPENSHIFT_INSTANCES": "openshift_instances",
    "API_RESPONSE_ACCOUNTS_OPENSHIFT_MEMORY": "openshift_memory_seconds",
    "API_RESPONSE_ACCOUNTS_OPENSHIFT_RUNTIME": "openshift_runtime_seconds",
    "API_RESPONSE_ACCOUNTS_OPENSHIFT_VCPU": "openshift_vcpu_seconds",
    "API_RESPONSE_ACCOUNTS_RHEL_CHALLENGED": "rhel_images_challenged",
    "API_RESPONSE_ACCOUNTS_RHEL_INSTANCES": "rhel_instances",
    "API_RESPONSE_ACCOUNTS_RHEL_MEMORY": "rhel_memory_seconds",
    "API_RESPONSE_ACCOUNTS_RHEL_RUNTIME": "rhel_runtime_seconds",
    "API_RESPONSE_ACCOUNTS_RHEL_VCPU": "rhel_vcpu_seconds",
    "API_RESPONSE_ACCOUNT_ACCOUNT_ID": "aws_account_id",
    "API_RESPONSE_ACCOUNT_ID": "id",
    "API_RESPONSE_ACCOUNT_NAME": "name",
    "API_RESPONSE_ACCOUNT_UPDATED_AT": "updated_at",
    "API_RESPONSE_AUTH_EMAIL": "email",
    "API_RESPONSE_AUTH_USERNAME": "username",
    "API_RESPONSE_IMAGES": "images",
    "API_RESPONSE_IMAGES_EDIT_CREATED": "created_at",
    "API_RESPONSE_IMAGES_EDIT_EC2_ID": "ec2_ami_id",
    "API_RESPONSE_IMAGES_EDIT_ENCRYPTED": "is_encrypted",
    "API_RESPONSE_IMAGES_EDIT_ID": "id",
    "API_RESPONSE_IMAGES_EDIT_INSPECTION_JSON": "inspection_json",
    "API_RESPONSE_IMAGES_EDIT_OPENSHIFT": "openshift",
    "API_RESPONSE_IMAGES_EDIT_OPENSHIFT_CHALLENGED": "openshift_challenged",
    "API_RESPONSE_IMAGES_EDIT_OPENSHIFT_DETECTED": "openshift_detected",
    "API_RESPONSE_IMAGES_EDIT_OWNER_AWS_ID": "owner_aws_account_id",
    "API_RESPONSE_IMAGES_EDIT_RESOURCE_TYPE": "resourcetype",
    "API_RESPONSE_IMAGES_EDIT_RHEL": "rhel",
    "API_RESPONSE_IMAGES_EDIT_RHEL_CHALLENGED": "rhel_challenged",
    "API_RESPONSE_IMAGES_EDIT_RHEL_DETECTED": "rhel_detected",
    "API_RESPONSE_IMAGES_EDIT_STATUS": "status",
    "API_RESPONSE_IMAGES_EDIT_UPDATED": "updated_at",
    "API_RESPONSE_IMAGES_ENCRYPTED": "is_encrypted",
    "API_RESPONSE_IMAGES_ID": "id",
    "API_RESPONSE_IMAGES_IMAGE_ID": "cloud_image_id",
    "API_RESPONSE_IMAGES_INSTANCES": "instances_seen",
    "API_RESPONSE_IMAGES_NAME": "name",
    "API_RESPONSE_IMAGES_OPENSHIFT": "openshift",
    "API_RESPONSE_IMAGES_OPENSHIFT_CHALLENGED": "openshift_challenged",
    "API_RESPONSE_IMAGES_OPENSHIFT_DETECTED": "openshift_detected",
    "API_RESPONSE_IMAGES_RHEL": "rhel",
    "API_RESPONSE_IMAGES_RHEL_CHALLENGED": "rhel_challenged",
    "API_RESPONSE_IMAGES_RHEL_DETECTED": "rhel_detected",
    "API_RESPONSE_IMAGES_SECONDS": "runtime_seconds",
    "API_RESPONSE_IMAGES_STATUS": "status",
    "API_RESPONSE_INSTANCES_OPENSHIFT": "instances_seen_with_openshift",
    "API_RESPONSE_INSTANCES_RHEL": "instances_seen_with_rhel",
    "API_RESPONSE_INSTANCES_USAGE": "daily_usage",
    "API_RESPONSE_INSTANCES_USAGE_DATE": "date",
    "API_RESPONSE_INSTANCES_USAGE_OPENSHIFT": "openshift_instances",
    "API_RESPONSE_INSTANCES_USAGE_OPENSHIFT_MEMORY": "openshift_memory_seconds",
    "API_RESPONSE_INSTANCES_USAGE_OPENSHIFT_RUNTIME": "openshift_runtime_seconds",
    "API_RESPONSE_INSTANCES_USAGE_OPENSHIFT_VCPU": "openshift_vcpu_seconds",
    "API_RESPONSE_INSTANCES_USAGE_RHEL": "rhel_instances",
    "API_RESPONSE_INSTANCES_USAGE_RHEL_MEMORY": "rhel_memory_seconds",
    "API_RESPONSE_INSTANCES_USAGE_RHEL_RUNTIME": "rhel_runtime_seconds",
    "API_RESPONSE_INSTANCES_USAGE_RHEL_VCPU": "rhel_vcpu_seconds",
    "API_RESPONSE_SYS_CONFIG_AWS_ID": "aws_account_id",
    "API_RESPONSE_SYS_CONFIG_AWS_POLICIES": "aws_policies",
    "API_RESPONSE_SYS_CONFIG_TRADITIONAL_INSPECTION": "traditional_inspection",
    "API_RESPONSE_SYS_CONFIG_VERSION": "version",
    "API_SUBMIT_ACCOUNT_ARN": "account_arn",
    "API_SUBMIT_ACCOUNT_AWS_ID": "aws_account_id",
    "API_SUBMIT_ACCOUNT_ID": "id",
    "API_SUBMIT_ACCOUNT_NAME": "name",
    "API_SUBMIT_ACCOUNT_RESOURCE_TYPE": "resourcetype",
    "API_SUBMIT_AUTH_PASSWORD": "password",
    "API_SUBMIT_AUTH_USERNAME": "username",
    "API_SUBMIT_IMAGE_ID": "id",
    "API_SUBMIT_IMAGE_OPENSHIFT_CHALLENGED": "openshift_challenged",
    "API_SUBMIT_IMAGE_RESOURCE_TYPE": "resourcetype",
    "API_SUBMIT_IMAGE_RHEL_CHALLENGED": "rhel_challenged",
  },
  "default": Object {
    "API_QUERY_ACCOUNT_ID": "account_id",
    "API_QUERY_END": "end",
    "API_QUERY_NAME": "name_pattern",
    "API_QUERY_START": "start",
    "API_QUERY_USER_ID": "user_id",
    "API_RESPONSE_ACCOUNTS": "cloud_account_overviews",
    "API_RESPONSE_ACCOUNTS_ACCOUNT_ID": "cloud_account_id",
    "API_RESPONSE_ACCOUNTS_ARN": "arn",
    "API_RESPONSE_ACCOUNTS_DATE": "creation_date",
    "API_RESPONSE_ACCOUNTS_ID": "id",
    "API_RESPONSE_ACCOUNTS_IMAGES": "images",
    "API_RESPONSE_ACCOUNTS_INSTANCES": "instances",
    "API_RESPONSE_ACCOUNTS_NAME": "name",
    "API_RESPONSE_ACCOUNTS_OPENSHIFT_CHALLENGED": "openshift_images_challenged",
    "API_RESPONSE_ACCOUNTS_OPENSHIFT_INSTANCES": "openshift_instances",
    "API_RESPONSE_ACCOUNTS_OPENSHIFT_MEMORY": "openshift_memory_seconds",
    "API_RESPONSE_ACCOUNTS_OPENSHIFT_RUNTIME": "openshift_runtime_seconds",
    "API_RESPONSE_ACCOUNTS_OPENSHIFT_VCPU": "openshift_vcpu_seconds",
    "API_RESPONSE_ACCOUNTS_RHEL_CHALLENGED": "rhel_images_challenged",
    "API_RESPONSE_ACCOUNTS_RHEL_INSTANCES": "rhel_instances",
    "API_RESPONSE_ACCOUNTS_RHEL_MEMORY": "rhel_memory_seconds",
    "API_RESPONSE_ACCOUNTS_RHEL_RUNTIME": "rhel_runtime_seconds",
    "API_RESPONSE_ACCOUNTS_RHEL_VCPU": "rhel_vcpu_seconds",
    "API_RESPONSE_ACCOUNT_ACCOUNT_ID": "aws_account_id",
    "API_RESPONSE_ACCOUNT_ID": "id",
    "API_RESPONSE_ACCOUNT_NAME": "name",
    "API_RESPONSE_ACCOUNT_UPDATED_AT": "updated_at",
    "API_RESPONSE_AUTH_EMAIL": "email",
    "API_RESPONSE_AUTH_USERNAME": "username",
    "API_RESPONSE_IMAGES": "images",
    "API_RESPONSE_IMAGES_EDIT_CREATED": "created_at",
    "API_RESPONSE_IMAGES_EDIT_EC2_ID": "ec2_ami_id",
    "API_RESPONSE_IMAGES_EDIT_ENCRYPTED": "is_encrypted",
    "API_RESPONSE_IMAGES_EDIT_ID": "id",
    "API_RESPONSE_IMAGES_EDIT_INSPECTION_JSON": "inspection_json",
    "API_RESPONSE_IMAGES_EDIT_OPENSHIFT": "openshift",
    "API_RESPONSE_IMAGES_EDIT_OPENSHIFT_CHALLENGED": "openshift_challenged",
    "API_RESPONSE_IMAGES_EDIT_OPENSHIFT_DETECTED": "openshift_detected",
    "API_RESPONSE_IMAGES_EDIT_OWNER_AWS_ID": "owner_aws_account_id",
    "API_RESPONSE_IMAGES_EDIT_RESOURCE_TYPE": "resourcetype",
    "API_RESPONSE_IMAGES_EDIT_RHEL": "rhel",
    "API_RESPONSE_IMAGES_EDIT_RHEL_CHALLENGED": "rhel_challenged",
    "API_RESPONSE_IMAGES_EDIT_RHEL_DETECTED": "rhel_detected",
    "API_RESPONSE_IMAGES_EDIT_STATUS": "status",
    "API_RESPONSE_IMAGES_EDIT_UPDATED": "updated_at",
    "API_RESPONSE_IMAGES_ENCRYPTED": "is_encrypted",
    "API_RESPONSE_IMAGES_ID": "id",
    "API_RESPONSE_IMAGES_IMAGE_ID": "cloud_image_id",
    "API_RESPONSE_IMAGES_INSTANCES": "instances_seen",
    "API_RESPONSE_IMAGES_NAME": "name",
    "API_RESPONSE_IMAGES_OPENSHIFT": "openshift",
    "API_RESPONSE_IMAGES_OPENSHIFT_CHALLENGED": "openshift_challenged",
    "API_RESPONSE_IMAGES_OPENSHIFT_DETECTED": "openshift_detected",
    "API_RESPONSE_IMAGES_RHEL": "rhel",
    "API_RESPONSE_IMAGES_RHEL_CHALLENGED": "rhel_challenged",
    "API_RESPONSE_IMAGES_RHEL_DETECTED": "rhel_detected",
    "API_RESPONSE_IMAGES_SECONDS": "runtime_seconds",
    "API_RESPONSE_IMAGES_STATUS": "status",
    "API_RESPONSE_INSTANCES_OPENSHIFT": "instances_seen_with_openshift",
    "API_RESPONSE_INSTANCES_RHEL": "instances_seen_with_rhel",
    "API_RESPONSE_INSTANCES_USAGE": "daily_usage",
    "API_RESPONSE_INSTANCES_USAGE_DATE": "date",
    "API_RESPONSE_INSTANCES_USAGE_OPENSHIFT": "openshift_instances",
    "API_RESPONSE_INSTANCES_USAGE_OPENSHIFT_MEMORY": "openshift_memory_seconds",
    "API_RESPONSE_INSTANCES_USAGE_OPENSHIFT_RUNTIME": "openshift_runtime_seconds",
    "API_RESPONSE_INSTANCES_USAGE_OPENSHIFT_VCPU": "openshift_vcpu_seconds",
    "API_RESPONSE_INSTANCES_USAGE_RHEL": "rhel_instances",
    "API_RESPONSE_INSTANCES_USAGE_RHEL_MEMORY": "rhel_memory_seconds",
    "API_RESPONSE_INSTANCES_USAGE_RHEL_RUNTIME": "rhel_runtime_seconds",
    "API_RESPONSE_INSTANCES_USAGE_RHEL_VCPU": "rhel_vcpu_seconds",
    "API_RESPONSE_SYS_CONFIG_AWS_ID": "aws_account_id",
    "API_RESPONSE_SYS_CONFIG_AWS_POLICIES": "aws_policies",
    "API_RESPONSE_SYS_CONFIG_TRADITIONAL_INSPECTION": "traditional_inspection",
    "API_RESPONSE_SYS_CONFIG_VERSION": "version",
    "API_SUBMIT_ACCOUNT_ARN": "account_arn",
    "API_SUBMIT_ACCOUNT_AWS_ID": "aws_account_id",
    "API_SUBMIT_ACCOUNT_ID": "id",
    "API_SUBMIT_ACCOUNT_NAME": "name",
    "API_SUBMIT_ACCOUNT_RESOURCE_TYPE": "resourcetype",
    "API_SUBMIT_AUTH_PASSWORD": "password",
    "API_SUBMIT_AUTH_USERNAME": "username",
    "API_SUBMIT_IMAGE_ID": "id",
    "API_SUBMIT_IMAGE_OPENSHIFT_CHALLENGED": "openshift_challenged",
    "API_SUBMIT_IMAGE_RESOURCE_TYPE": "resourcetype",
    "API_SUBMIT_IMAGE_RHEL_CHALLENGED": "rhel_challenged",
  },
}
`;

exports[`ApiTypes Should have specific API properties: specific types 1`] = `
Object {
  "API_QUERY_ACCOUNT_ID": "account_id",
  "API_QUERY_END": "end",
  "API_QUERY_NAME": "name_pattern",
  "API_QUERY_START": "start",
  "API_QUERY_USER_ID": "user_id",
  "API_RESPONSE_ACCOUNTS": "cloud_account_overviews",
  "API_RESPONSE_ACCOUNTS_ACCOUNT_ID": "cloud_account_id",
  "API_RESPONSE_ACCOUNTS_ARN": "arn",
  "API_RESPONSE_ACCOUNTS_DATE": "creation_date",
  "API_RESPONSE_ACCOUNTS_ID": "id",
  "API_RESPONSE_ACCOUNTS_IMAGES": "images",
  "API_RESPONSE_ACCOUNTS_INSTANCES": "instances",
  "API_RESPONSE_ACCOUNTS_NAME": "name",
  "API_RESPONSE_ACCOUNTS_OPENSHIFT_CHALLENGED": "openshift_images_challenged",
  "API_RESPONSE_ACCOUNTS_OPENSHIFT_INSTANCES": "openshift_instances",
  "API_RESPONSE_ACCOUNTS_OPENSHIFT_MEMORY": "openshift_memory_seconds",
  "API_RESPONSE_ACCOUNTS_OPENSHIFT_RUNTIME": "openshift_runtime_seconds",
  "API_RESPONSE_ACCOUNTS_OPENSHIFT_VCPU": "openshift_vcpu_seconds",
  "API_RESPONSE_ACCOUNTS_RHEL_CHALLENGED": "rhel_images_challenged",
  "API_RESPONSE_ACCOUNTS_RHEL_INSTANCES": "rhel_instances",
  "API_RESPONSE_ACCOUNTS_RHEL_MEMORY": "rhel_memory_seconds",
  "API_RESPONSE_ACCOUNTS_RHEL_RUNTIME": "rhel_runtime_seconds",
  "API_RESPONSE_ACCOUNTS_RHEL_VCPU": "rhel_vcpu_seconds",
  "API_RESPONSE_ACCOUNT_ACCOUNT_ID": "aws_account_id",
  "API_RESPONSE_ACCOUNT_ID": "id",
  "API_RESPONSE_ACCOUNT_NAME": "name",
  "API_RESPONSE_ACCOUNT_UPDATED_AT": "updated_at",
  "API_RESPONSE_AUTH_EMAIL": "email",
  "API_RESPONSE_AUTH_USERNAME": "username",
  "API_RESPONSE_IMAGES": "images",
  "API_RESPONSE_IMAGES_EDIT_CREATED": "created_at",
  "API_RESPONSE_IMAGES_EDIT_EC2_ID": "ec2_ami_id",
  "API_RESPONSE_IMAGES_EDIT_ENCRYPTED": "is_encrypted",
  "API_RESPONSE_IMAGES_EDIT_ID": "id",
  "API_RESPONSE_IMAGES_EDIT_INSPECTION_JSON": "inspection_json",
  "API_RESPONSE_IMAGES_EDIT_OPENSHIFT": "openshift",
  "API_RESPONSE_IMAGES_EDIT_OPENSHIFT_CHALLENGED": "openshift_challenged",
  "API_RESPONSE_IMAGES_EDIT_OPENSHIFT_DETECTED": "openshift_detected",
  "API_RESPONSE_IMAGES_EDIT_OWNER_AWS_ID": "owner_aws_account_id",
  "API_RESPONSE_IMAGES_EDIT_RESOURCE_TYPE": "resourcetype",
  "API_RESPONSE_IMAGES_EDIT_RHEL": "rhel",
  "API_RESPONSE_IMAGES_EDIT_RHEL_CHALLENGED": "rhel_challenged",
  "API_RESPONSE_IMAGES_EDIT_RHEL_DETECTED": "rhel_detected",
  "API_RESPONSE_IMAGES_EDIT_STATUS": "status",
  "API_RESPONSE_IMAGES_EDIT_UPDATED": "updated_at",
  "API_RESPONSE_IMAGES_ENCRYPTED": "is_encrypted",
  "API_RESPONSE_IMAGES_ID": "id",
  "API_RESPONSE_IMAGES_IMAGE_ID": "cloud_image_id",
  "API_RESPONSE_IMAGES_INSTANCES": "instances_seen",
  "API_RESPONSE_IMAGES_NAME": "name",
  "API_RESPONSE_IMAGES_OPENSHIFT": "openshift",
  "API_RESPONSE_IMAGES_OPENSHIFT_CHALLENGED": "openshift_challenged",
  "API_RESPONSE_IMAGES_OPENSHIFT_DETECTED": "openshift_detected",
  "API_RESPONSE_IMAGES_RHEL": "rhel",
  "API_RESPONSE_IMAGES_RHEL_CHALLENGED": "rhel_challenged",
  "API_RESPONSE_IMAGES_RHEL_DETECTED": "rhel_detected",
  "API_RESPONSE_IMAGES_SECONDS": "runtime_seconds",
  "API_RESPONSE_IMAGES_STATUS": "status",
  "API_RESPONSE_INSTANCES_OPENSHIFT": "instances_seen_with_openshift",
  "API_RESPONSE_INSTANCES_RHEL": "instances_seen_with_rhel",
  "API_RESPONSE_INSTANCES_USAGE": "daily_usage",
  "API_RESPONSE_INSTANCES_USAGE_DATE": "date",
  "API_RESPONSE_INSTANCES_USAGE_OPENSHIFT": "openshift_instances",
  "API_RESPONSE_INSTANCES_USAGE_OPENSHIFT_MEMORY": "openshift_memory_seconds",
  "API_RESPONSE_INSTANCES_USAGE_OPENSHIFT_RUNTIME": "openshift_runtime_seconds",
  "API_RESPONSE_INSTANCES_USAGE_OPENSHIFT_VCPU": "openshift_vcpu_seconds",
  "API_RESPONSE_INSTANCES_USAGE_RHEL": "rhel_instances",
  "API_RESPONSE_INSTANCES_USAGE_RHEL_MEMORY": "rhel_memory_seconds",
  "API_RESPONSE_INSTANCES_USAGE_RHEL_RUNTIME": "rhel_runtime_seconds",
  "API_RESPONSE_INSTANCES_USAGE_RHEL_VCPU": "rhel_vcpu_seconds",
  "API_RESPONSE_SYS_CONFIG_AWS_ID": "aws_account_id",
  "API_RESPONSE_SYS_CONFIG_AWS_POLICIES": "aws_policies",
  "API_RESPONSE_SYS_CONFIG_TRADITIONAL_INSPECTION": "traditional_inspection",
  "API_RESPONSE_SYS_CONFIG_VERSION": "version",
  "API_SUBMIT_ACCOUNT_ARN": "account_arn",
  "API_SUBMIT_ACCOUNT_AWS_ID": "aws_account_id",
  "API_SUBMIT_ACCOUNT_ID": "id",
  "API_SUBMIT_ACCOUNT_NAME": "name",
  "API_SUBMIT_ACCOUNT_RESOURCE_TYPE": "resourcetype",
  "API_SUBMIT_AUTH_PASSWORD": "password",
  "API_SUBMIT_AUTH_USERNAME": "username",
  "API_SUBMIT_IMAGE_ID": "id",
  "API_SUBMIT_IMAGE_OPENSHIFT_CHALLENGED": "openshift_challenged",
  "API_SUBMIT_IMAGE_RESOURCE_TYPE": "resourcetype",
  "API_SUBMIT_IMAGE_RHEL_CHALLENGED": "rhel_challenged",
}
`;
